# docs-scraper

./: .dockerignore  .env.example  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  bors.toml  docker-compose.yml  pyproject.toml  tox.ini
.github/: dependabot.yml  release-draft-template.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-docker-image.yml  tests.yml
scraper/src/: custom_dupefilter.py  index.py
scraper/src/config/: browser_handler.py  version.py
scraper/src/strategies/: abstract_strategy.py
tests/: conftest.py
tests/config_files_examples/: docs-basics.config.json  docs-custom.config.json
tests/config_loader/: get_extra_facets_test.py  open_selenium_browser_test.py  start_urls_test.py
tests/meilisearch_helper/: meilisearch_helper_test.py
